[gd_scene load_steps=8 format=3 uid="uid://bxnfjapjfscuv"]

[ext_resource type="Script" path="res://script/exit_door.gd" id="1_ce3ov"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xhyb7"]
size = Vector3(4, 4, 0.3)

[sub_resource type="Animation" id="Animation_f24t1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftMeshPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_n0kfa"]
resource_name = "open"
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("LeftMeshPivot")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array()
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftMeshPivot:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.46229, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.314159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_21r0h"]
_data = {
"RESET": SubResource("Animation_f24t1"),
"open": SubResource("Animation_n0kfa")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fv53e"]
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_74tod"]
material = SubResource("StandardMaterial3D_fv53e")
size = Vector3(4, 4, 1)

[node name="ExitDoor" type="Node3D"]
script = ExtResource("1_ce3ov")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.15)
shape = SubResource("BoxShape3D_xhyb7")

[node name="LeftMeshPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="RightMeshPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_21r0h")
}

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.5)
mesh = SubResource("BoxMesh_74tod")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
